create site template

--- a/01-animate/7-enoki.html
+++ b/01-animate/7-enoki.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="style.css">
-    <title>White Button Wiki</title>
+    <title>Enoki Wiki</title>
 </head>
 <body>
     <header>
@@ -13,23 +13,23 @@
         <nav>
             <ul>
                 <li id="toggle-expand"><span id="expand">Mushrooms</span></a><i class="fa fa-angle-up expand-arrow" id="expand-up" aria-hidden="true"></i><i class="fa fa-angle-down expand-arrow" id="expand-down" aria-hidden="true"></i></li>
-                <li class="collapse current-link"><a href="1-white-button.html">White Button</a></li>
+                <li class="collapse"><a href="1-white-button.html">White Button</a></li>
                 <li class="collapse"><a href="2-closed.cup.html">Closed Cup</a></li>
                 <li class="collapse"><a href="3-open-cup.html">Open Cup</a></li>
                 <li class="collapse"><a href="4-chestnut.html">Chesnut</a></li>
                 <li class="collapse"><a href="5-portobello.html">Portobello</a></li>
                 <li class="collapse"><a href="6-shiitake.html">Shiitake</a></li>
-                <li class="collapse"><a href="7-enoki.html">Enoki</a></li>
+                <li class="collapse current-link"><a href="7-enoki.html">Enoki</a></li>
             </ul>
         </nav>
     </header>
     <main>
-        <div id="white-button-1" class="main-section">
-            <h2>White Button Mushrooms</h2>
+        <div id="enoki-1" class="main-section">
+            <h2>Enoki Mushrooms</h2>
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cupiditate quam beatae iste tempore magnam expedita corporis harum dignissimos, quia nulla temporibus, perspiciatis pariatur illo nostrum alias quaerat eum perferendis incidunt debitis vitae accusantium illum! Quis doloremque explicabo mollitia beatae vel ipsam voluptate? Temporibus cupiditate fuga rem dignissimos alias, cum magni.</p>
         </div>
-        <div id="white-button-2" class="main-section">
-            <img src="img/white-button-1.jpg" alt="White Button Mushrooms">
+        <div id="enoki-2" class="main-section">
+            <img src="img/enoki-1.jpg" alt="Enoki Mushrooms">
         </div>
     </main>
     <footer>
