--- a/01-animate/4-chestnut.html
+++ b/01-animate/4-chestnut.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="style.css">
-    <title>White Button Wiki</title>
+    <title>Chestnut Wiki</title>
 </head>
 <body>
     <header>
@@ -13,10 +13,10 @@
         <nav>
             <ul>
                 <li id="toggle-expand"><span id="expand">Mushrooms</span></a><i class="fa fa-angle-up expand-arrow" id="expand-up" aria-hidden="true"></i><i class="fa fa-angle-down expand-arrow" id="expand-down" aria-hidden="true"></i></li>
-                <li class="collapse current-link"><a href="1-white-button.html">White Button</a></li>
+                <li class="collapse"><a href="1-white-button.html">White Button</a></li>
                 <li class="collapse"><a href="2-closed.cup.html">Closed Cup</a></li>
                 <li class="collapse"><a href="3-open-cup.html">Open Cup</a></li>
-                <li class="collapse"><a href="4-chestnut.html">Chesnut</a></li>
+                <li class="collapse current-link"><a href="4-chestnut.html">Chesnut</a></li>
                 <li class="collapse"><a href="5-portobello.html">Portobello</a></li>
                 <li class="collapse"><a href="6-shiitake.html">Shiitake</a></li>
                 <li class="collapse"><a href="7-enoki.html">Enoki</a></li>
@@ -24,12 +24,12 @@
         </nav>
     </header>
     <main>
-        <div id="white-button-1" class="main-section">
-            <h2>White Button Mushrooms</h2>
+        <div id="chestnut-1" class="main-section">
+            <h2>Chestnut Mushrooms</h2>
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cupiditate quam beatae iste tempore magnam expedita corporis harum dignissimos, quia nulla temporibus, perspiciatis pariatur illo nostrum alias quaerat eum perferendis incidunt debitis vitae accusantium illum! Quis doloremque explicabo mollitia beatae vel ipsam voluptate? Temporibus cupiditate fuga rem dignissimos alias, cum magni.</p>
         </div>
-        <div id="white-button-2" class="main-section">
-            <img src="img/white-button-1.jpg" alt="White Button Mushrooms">
+        <div id="chestnut-2" class="main-section">
+            <img src="img/chestnut-1.jpg" alt="Chestnut Mushrooms">
         </div>
     </main>
     <footer>
